[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "config_maker"
version = "0.0.1"
authors = [
  { name="Robert Brieler", email="rob.brieler@gmail.com" },
]
description = "A package for building immutable configuration objects"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]